# viper

./: CMakeLists.txt  ViArray.c  ViArray.h  ViString.c  ViString.h  arithmetica.c  arithmetica.h  array.c  array.h  builtins.c  builtins.h  composer.c  composer.h  display.c  display.h  examples.vi  exception.c  exception.h  expression.c  expression.h  fread.c  fread.h  functions.c  functions.h  interpreter.c  interpreter.h  keywords.h  lexer.c  lexer.h  main.c  memory.c  memory.h  namespace.c  namespace.h  operators.h  parser.c  parser.h  run.c  run.h  test.c  (+3 more)
.github/workflows/: c-cpp.yml
examples/: calc.vi
